@@ -1,18 +1,17 @@
-package com.rdas.crossword;
+package com.rdas.crossword.unit.service;
 
+import com.rdas.crossword.config.HazelcastConfiguration;
 import com.rdas.crossword.service.CrosswordSolver;
-import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.core.io.Resource;
-import org.springframework.core.io.ResourceLoader;
+import org.springframework.context.annotation.ComponentScan;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.Import;
+import org.springframework.core.annotation.Order;
+import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit4.SpringRunner;
 
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -22,31 +21,22 @@ import java.util.concurrent.atomic.AtomicInteger;
 import static org.assertj.core.api.Assertions.assertThat;
 
 @RunWith(SpringRunner.class)
-@SpringBootTest
-public class CrosswordResourceTest {
+@ContextConfiguration(classes = {CrosswordSolverTest.TestConfig.class})
+public class CrosswordSolverTest {
+
+    @Order(2)
+    @Configuration
+    @Import({HazelcastConfiguration.class})
+    @ComponentScan(basePackages = {"com.rdas.crossword.unit.service","com.rdas.crossword.config"})
+    static class TestConfig {
+    }
+
     @Autowired
     private CrosswordSolver crosswordSolver;
-    @Autowired
-    private ResourceLoader resourceLoader;
-
-    @Autowired
-    private WordsCache wordsCache;
-    private List<String> wordList;
-
-
-    @Before
-    public void init() throws Exception {
-        final Resource fileResource = resourceLoader.getResource("classpath:english.txt");
-        wordList = Files.readAllLines(Paths.get(fileResource.getURI()), StandardCharsets.UTF_8);
-
-        assertThat(wordList).isNotNull();
-    }
 
     @Test
     public void contextLoads() {
         assertThat(crosswordSolver).isNotNull();
-        assertThat(resourceLoader).isNotNull();
-        assertThat(wordsCache.getWordList()).isNotNull();
     }
 
     @Test
@@ -57,7 +47,7 @@ public class CrosswordResourceTest {
         Map<Integer, Character> characterPos = new HashMap<>();
         AtomicInteger atomicInteger = new AtomicInteger(0);
         Arrays.stream(searchChars).forEach(aChar -> {
-            characterPos.put(atomicInteger.getAndIncrement(), new Character(aChar.charAt(0)));
+            characterPos.put(atomicInteger.getAndIncrement(), Character.valueOf(aChar.charAt(0)));
         });
 
         List<String> search = crosswordSolver.search(lengthOfWord, characterPos);
@@ -73,7 +63,7 @@ public class CrosswordResourceTest {
         Map<Integer, Character> characterPos = new HashMap<>();
         AtomicInteger atomicInteger = new AtomicInteger(0);
         Arrays.stream(searchChars).forEach(aChar -> {
-            characterPos.put(atomicInteger.getAndIncrement(), new Character(aChar.charAt(0)));
+            characterPos.put(atomicInteger.getAndIncrement(), Character.valueOf(aChar.charAt(0)));
         });
 
         List<String> search = crosswordSolver.search(lengthOfWord, characterPos);
